--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -4,3 +4,18 @@ body {
   margin: 0;
   padding: 0;
 }
+
+/* Animations */
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.fade-in {
+  animation: fadeIn 0.1s ease-in-out;
+}
