--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -1,7 +1,7 @@
 .card {
   min-width: 200px;
   margin: 0;
-  padding: 20px;
+  padding: 5px 20px;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   background-color: #fff;
