--- a/src/routes/dashboard/dashboard.css
+++ b/src/routes/dashboard/dashboard.css
@@ -6,7 +6,7 @@
 }
 
 .recent-comments-widget {
-  min-height: 80vh;
+  height: 100%;
 }
 
 .dashboard-grid-col-2 {
@@ -17,10 +17,12 @@
 
 .likes-dislikes-widget {
   flex-grow: 1;
+  flex-basis: 0;
 }
 
 .audience-widget {
   flex-grow: 1;
+  flex-basis: 0;
 }
 
 .total-views-widget {
