--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -32,3 +32,14 @@
   border-radius: 50%;
   width: 30px;
 }
+
+.signout {
+  width: 20px;
+  margin-right: 5px;
+  border-radius: 0;
+  cursor: pointer;
+}
+
+.signout:hover {
+  filter: invert(60%) sepia(0%) saturate(3759%) hue-rotate(184deg) brightness(103%) contrast(74%);
+}
